# OpenSkynet

./: .gitignore  .gitmodules  Cargo.toml  README.md  ROADMAP.md  package-lock.json  package.json  pyproject.toml
.github/: COMMUNITY.md
.github/workflows/: ci.yml  release.yml
app/: jest.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.test.json
app/src/: App.tsx
app/src-tauri/src/: lib.rs  main.rs  vnc_proxy.rs  websocket_proxy.rs
app/src/core/: README.md
app/src/hooks/: index.ts  useAgent.ts  useMemory.ts  useRPCConnection.ts  useSandbox.ts  useSkills.ts
app/src/services/: rpcClient.ts
app/src/stores/: useSandboxStore.ts
app/src/styles/: index.css
app/src/tests/: setup.js
app/src/types/: index.ts  rpc.ts  sandbox.ts
crates/sediman-tui-bridge/src/: client.rs  lib.rs
crates/sediman-tui-core/: Cargo.toml
crates/sediman-tui-core/src/: lib.rs  markdown.rs
crates/sediman-tui/src/: app.rs  config.rs  constants.rs  error.rs  gpu_app.rs  logging.rs  main.rs  permission.rs  strings.rs  update.rs
docs/: CHANGELOG.md  CONTRIBUTING.md
docs/paper/: Makefile  main.bbl  main.tex  references.bib
docs/paper/scripts/: analyze_results.py  (+1 more)
scripts/: generate_skill_embeddings.py  import_clawskills.py
src/sediman/: auth.py  rpc_server.py  tui.py
tests/: test_agent_loop.py  test_agentbrowser_process.py  test_browser_concurrency.py  test_llm_provider.py  test_llm_provider_extended.py  test_rpc_skills.py  test_sandbox_runner.py  test_sandbox_runner.py.bak  test_sandbox_runner.py.bak2
tests/browser/: test_controller.py
(+230 files in other folders)
