[workspace]
members = [
    "crates/sediman-tui",
    "crates/sediman-tui-core",
    "crates/sediman-tui-bridge",
]
resolver = "2"

[workspace.package]
version = "0.3.14"
edition = "2021"
license = "MIT"
authors = ["OpenSkynet"]

[workspace.dependencies]
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
chrono = "0.4"
arboard = "3"
unicode-width = "0.2"
wgpu = "23"
winit = "0.30"
fontdue = "0.9"
pollster = "0.4"
bytemuck = "1"
